--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -338,9 +338,10 @@
                 </nav>
                 <div>
                     <form class="d-inline-block">
-                        <input class="form-control border-0" type="search" placeholder="Search"/>
+                        <input class="form-control border-0" type="search" placeholder="&#xF002; Search Department"
+                               style="font-family:Arial, FontAwesome"/>
                     </form>
-                    <!-- sortting button -->
+                    <!-- sorting button -->
                     <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
                 </div>
             </div>
@@ -430,7 +431,7 @@
                                             <div>
                                                 <label >Department Name</label>
                                                 <br/><br/>
-                                                <input type="text" class="form-control" name="departmentname"
+                                                <input type="text" class="form-control" name="departmentName"
                                                        placeholder="Department Name" id="edit-department-name"/>
                                             </div> <br />
 
