--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -185,7 +185,7 @@
                             id="reset-btn"
                             style="color: #ffffff !important"
                         >
-                            reset
+                            Reset
                         </button>
                         <div class="d-inline-block">
                             <select id="month-filter" class="form-control" action="filter">
@@ -196,7 +196,7 @@
                                 <option value="May">May</option>
                                 <option value="June">June</option>
                                 <option value="July">July</option>
-                                <option value="Auguest">Auguest</option>
+                                <option value="August">August</option>
                                 <option value="September">September</option>
                                 <option value="October">October</option>
                                 <option value="November">November</option>
@@ -228,7 +228,8 @@
                             <input
                                 class="form-control border-0"
                                 type="search"
-                                placeholder="Search project "
+                                placeholder="&#xF002; Search Project"
+                                style="font-family:Arial, FontAwesome"
                             />
                         </form>
                         <!-- modal toggle button start -->
