--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -199,7 +199,7 @@
 
                                 <hr>
 
-                                <div class="row row-cols-2">
+                                <div class="">
                                     <div class="">
                                         <div class="d-flex gap-2">
                                             <h4 class="text-primary">Deliverable List</h4>
@@ -211,10 +211,11 @@
                                         </div>
                                         <div
                                             id="project-detail-deliverable"
-                                            class="d-flex flex-column gap-2"
+                                            class="d-flex gap-2 flex-wrap gap-3"
                                         ></div>
                                     </div>
-                                    <div>
+                                    <hr>
+                                    <div class="mt-4">
                                         <div class="d-flex gap-2">
                                             <h4 class="text-primary">Architecture List</h4>
                                             <button type="button" class="mb-3 btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-architecture-modal">
