project overview detail ui repair done

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -733,27 +733,33 @@
                                 class="tab-pane fade show active profile-overview"
                                 id="project-overview"
                             >
+
+                                <div><h4  class="title">Overview Detail</h4></div>
                                 <div class="row row-cols-1 gap-2 p-3">
                                     <div class="row row-cols-2" id="detail-view">
                                         <div class="row row-cols-1 gap-2">
                                             <div class="">
-                                                <div class="col fs-6 fw-bold">department</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-building-user"></i>Department</div>
                                                 <div class="col" id="project-department-name">
                                                     dance club
                                                 </div>
                                             </div>
                                             <div class="">
-                                                <div class="col fs-6 fw-bold">Project name</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-clipboard"></i>Project name</div>
                                                 <div class="col" id="project-name">find nemo</div>
                                             </div>
                                             <div class="">
-                                                <div class="col fs-6 fw-bold">duration</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-business-time"></i>Duration</div>
                                                 <div class="col" id="project-duration">
                                                     3 Months
                                                 </div>
                                             </div>
                                              <div class="optional-view">
-                                                <div class="col fs-6 fw-bold">internal review</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-business-time"></i>Internal review</div>
                                                 <div class="col" id="project-current-internal-review-count">
                                                     Basic design
                                                 </div>
@@ -761,25 +767,29 @@
                                         </div>
                                         <div class="row row-cols-1 gap-2">
                                             <div class="">
-                                                <div class="col fs-6 fw-bold">start date</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-calendar-days"></i>Start date</div>
                                                 <div class="col" id="project-start-date">
                                                     25 september 2022
                                                 </div>
                                             </div>
                                             <div class="">
-                                                <div class="col fs-6 fw-bold">end date</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-calendar-days"></i>End date</div>
                                                 <div class="col" id="project-end-date">
                                                     25 december 2022
                                                 </div>
                                             </div>
                                             <div class="" >
-                                                <div class="col fs-6 fw-bold">current phase</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-list-check"></i>Current phase</div>
                                                 <div class="col" id="project-current-phase">
                                                     Basic design
                                                 </div>
                                             </div>
                                             <div class="optional-view">
-                                                <div class="col fs-6 fw-bold">external review</div>
+                                                <div class="col fs-6 fw-bold">
+                                                    <i class="fa-solid fa-business-time"></i>External review</div>
                                                 <div class="col" id="project-current-external-review-count">
                                                     Basic design
                                                 </div>
@@ -789,7 +799,8 @@
                                     </div>
                                     <div>
                                         <div>
-                                            <p class="card-title m-0 fs-6 fw-bold">background</p>
+                                            <p class="card-title m-0 fs-6 fw-bold">
+                                                <i class="fa-solid fa-folder-open"></i>Background</p>
                                             <p class="" id="project-background" style="word-break: break-all;"></p>
                                         </div>
                                     </div>
@@ -1318,7 +1329,7 @@
                             >
                                 <div class="container-fluid">
                                 <div class="row">
-                                    <div><h4 class="d-flex justify-content-center mt-2">Client Information</h4></div>
+                                    <div><h4 class="d-flex justify-content-center mt-2 title">Client Information</h4></div>
 
                                     <div class="row row-cols-1">
                                         <div
