--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1344,5 +1344,7 @@
     font-weight: bold;
     color: #369;
     font-family:  Georgia, serif;
-    margin-bottom: 10px;
+
+    margin-top: 10px;
+    margin-left: 20px;
 }
