testing for coverage

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="UTF-8" />
-        <title>Internal Project Management</title>
+        <title>
+            Internal Project Management</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta
             name="keywords"
@@ -717,6 +718,7 @@
                                 >
                                     Edit
                                 </button>
+
                             </li>
                             <li class="nav-item">
                                 <button
