--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
     <meta content name="description"/>
     <meta name="author" content="teamplaceholder's project"/>
 
-    <link rel="icon" href="/images/tph.png" type="image/x-icon">
+    <link rel="icon" href="/images/dat.png" type="image/x-icon">
 
 
 
