--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
-    <title>DASHMIN - Bootstrap Admin Template</title>
+    <title>Internal Project Management</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <meta
             name="keywords"
@@ -10,6 +10,7 @@
     />
     <meta content name="description"/>
     <meta name="author" content="teamplaceholder's project"/>
+    <link rel="icon" href="/images/dat.png" type="image/x-icon">
 
     <!-- Favicon -->
     <!-- <link href="/images/favicon.ico" rel="icon"> -->
