--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -12,6 +12,8 @@
         <meta content name="description" />
         <meta name="author" content="teamplaceholder's project" />
 
+        <link rel="icon" href="/images/dat.png" type="image/x-icon">
+
         <!-- Favicon -->
         <!-- <link href="/images/favicon.ico" rel="icon"> -->
 
