--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -12,8 +12,7 @@
     />
     <meta content name="description"/>
     <meta name="author" content="teamplaceholder's project"/>
-    <link rel="icon" href="/images/tph.png" type="image/x-icon">
-
+    <link rel="icon" href="/images/dat.png" type="image/x-icon">
     <!-- Favicon -->
     <!-- <link href="/images/favicon.ico" rel="icon"> -->
 
