--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="project, management, project management, teamplaceholder project management" />
   <meta content name="description" />
   <meta name="author" content="teamplaceholder's project" />
+  <link rel="icon" href="/images/dat.png" type="image/x-icon">
 
   <!-- Favicon -->
   <!-- <link href="/images/favicon.ico" rel="icon"> -->
