not very important

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1344,7 +1344,5 @@
     font-weight: bold;
     color: #369;
     font-family:  Georgia, serif;
-
-    margin-top: 10px;
-    margin-left: 20px;
+    margin-bottom: 10px;
 }
