--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1219,7 +1219,7 @@
                                                     <div class="col-md-8 col-lg-9">
                                                         <textarea
                                                             type="text"
-                                                            class="form-control border-task-description"
+                                                            class="form-control p-0"
                                                             name="background"
                                                             id="project-detail-background"
                                                         ></textarea>
